fixed the styles on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ code {
   align-items: space-between;
   background-color: rgb(197, 205, 216);
   margin: 1.2vw;
-  width: 30%;
+  min-width: 30%;
   padding: 20px;
   border-radius: 5px;
 }
@@ -64,11 +64,12 @@ code {
   background-color: rgb(229, 237, 250);
   border-radius: 5px;
   padding: 2%;
+  max-height: 200px;
   align-items: center;
 }
 .project_img {
+  max-height: 200px;
   flex:1;
-  max-height: 350px;
 }
 
 .me_img {
